# overflowml

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LAUNCH_POSTS.md  LICENSE  README.md  RUN_ALL.bat  SECURITY.md  benchmark_posts.md  pyproject.toml  upload_pypi.bat
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
docker/: Dockerfile.cuda12  Dockerfile.rocm6
examples/: any_diffusers_pipeline.py  load_llm.py  qwen_image_edit.py
overflowml/: __init__.py  batch.py  cli.py  detect.py  inference.py  optimize.py  strategy.py  transformers_ext.py  tui.py
overflowml/benchmark/: __init__.py  runner.py  test_models.py
overflowml/core/: __init__.py  cache.py  can_run.py  explain.py  hardware.py  planner.py  runtime.py  types.py
overflowml/doctor/: __init__.py  checks.py  report.py
overflowml/inspect/: __init__.py  arch_registry.py  hf_probe.py  model_estimator.py
overflowml/monitor/: __init__.py  metrics.py  sampler.py  tui.py
tests/: test_batch.py  test_benchmark.py  test_cache.py  test_can_run.py  test_cli.py  test_detect.py  test_doctor.py  test_hardware_new.py  test_inspect.py  test_llamacpp.py  test_monitor.py  test_multi_gpu.py  test_optimize.py  test_planner.py  test_runtime.py  test_strategy.py  test_transformers.py  test_tui_autoclick.py  test_types.py
