[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overflowml"
version = "0.2.1"
description = "Run AI models larger than your GPU. Auto-detects hardware and applies optimal memory strategy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "HybridLab AI" }]
keywords = ["machine-learning", "gpu", "vram", "offload", "optimization", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
transformers = ["transformers>=4.40", "accelerate>=0.30"]
diffusers = ["diffusers>=0.30", "transformers", "accelerate"]
mlx = ["mlx>=0.20"]
quantize = ["torchao>=0.5"]
bnb = ["bitsandbytes>=0.43"]
all = ["overflowml[transformers,diffusers,quantize,bnb]"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/Khaeldur/overflowml"

[project.scripts]
overflowml = "overflowml.cli:main"

[tool.ruff]
line-length = 100
