[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overflowml"
version = "0.7.0"
description = "Run AI models larger than your GPU. Auto-detects hardware and applies optimal memory strategy."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "HybridLab AI" }]
keywords = ["machine-learning", "gpu", "vram", "offload", "optimization", "inference", "quantization", "llm", "transformers", "diffusers", "memory-efficient", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "torch>=2.0,<3.0",
    "psutil>=5.9,<7.0",
]

[project.optional-dependencies]
hub = ["huggingface_hub>=0.20"]
transformers = ["transformers>=4.40,<6.0", "accelerate>=0.30,<2.0"]
diffusers = ["diffusers>=0.30,<1.0", "transformers", "accelerate"]
mlx = ["mlx>=0.20"]
quantize = ["torchao>=0.5"]
bnb = ["bitsandbytes>=0.43"]
monitor = ["rich>=13.0"]
metrics = ["prometheus-client>=0.20"]
all = ["overflowml[hub,transformers,diffusers,quantize,bnb,monitor]"]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/Khaeldur/overflowml"
Repository = "https://github.com/Khaeldur/overflowml"
Changelog = "https://github.com/Khaeldur/overflowml/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Khaeldur/overflowml/issues"

[project.scripts]
overflowml = "overflowml.cli:main"

[tool.ruff]
line-length = 100
